homeworks/vi.petrushenko/module-03-lesson-08/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  type: ClusterIP
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
